Closed Bug 828249 Opened 13 years ago Closed 13 years ago

Fixed position elements are incorrectly placed when zooming out beyond the page boundaries

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

All
Android
defect
Not set
normal

Tracking

(firefox19 unaffected, firefox20 fixed, firefox21 fixed)

RESOLVED FIXED
Firefox 21
Tracking Status
firefox19 --- unaffected
firefox20 --- fixed
firefox21 --- fixed

People

(Reporter: cwiiis, Assigned: cwiiis)

References

Details

(Keywords: regression)

Attachments

(1 file)

I don't know when this happened but someone mixed up the width and height fields in the fixed-position transform code in CompositorParent. Patch incoming. Will also check how far back this goes, this would definitely be a candidate for merging to aurora/beta if those are affected.
This applies on top of the patch in bug 827844 but is easily rebased.
Attachment #699704 - Flags: review?(bugmail.mozilla)
Affects nightly and aurora but not beta. At some point a Point type was changed to a Size type and width/height were mixed around.
Comment on attachment 699704 [details] [diff] [review] Correct fixed layer positioning when zoomed out beyond page bounds Review of attachment 699704 [details] [diff] [review]: ----------------------------------------------------------------- This will need to be uplifted to aurora (and maybe b2g?), it was regressed by bug 811950 recently. Patch looks good.
Attachment #699704 - Flags: review?(bugmail.mozilla) → review+
CC'ing anthony who can advise on whether or not this patch needs to go into b2g.
Blocks: 811950
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #4) > CC'ing anthony who can advise on whether or not this patch needs to go into > b2g. b2g doesn't have overscroll, so the x and y scale will never differ - shouldn't be necessary.
Yeah but we might want to uplift anyway to keep code in sync and avoid rebasing future patches that do need uplift.
Comment on attachment 699704 [details] [diff] [review] Correct fixed layer positioning when zoomed out beyond page bounds [Approval Request Comment] Bug caused by (feature/regressing bug #): Fixed position elements float in weird places when zooming out beyond page bounds, regressed by bug #811950 User impact if declined: The above Testing completed (on m-c, etc.): Tested locally and patch on inbound. Has green try run. Risk to taking this patch (and alternatives if risky): Trivial fix, no appreciable risk. String or UUID changes made by this patch: None.
Attachment #699704 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 21
Comment on attachment 699704 [details] [diff] [review] Correct fixed layer positioning when zoomed out beyond page bounds Low risk fix for Firefox 20 zoom/layout regression. Approving for Aurora 20.
Attachment #699704 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: