Bug 828249 - Fix fixed layer positioning when zoomed out beyond page bounds. r=kats

width/height parameters in CompositorParent got mixed up at some point.